// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`allow overriding flags  1`] = `
{
  "stderr": "",
  "write": [],
}
`;

exports[`boolean flags do not swallow the next argument  1`] = `
{
  "stderr": "",
  "stdout": "console.log('could be single quote and without semi');",
  "write": [],
}
`;

exports[`deprecated option values are warned  1`] = `
{
  "stderr": "[warn] --jsx-bracket-same-line is deprecated.",
  "stdout": "console.log("could be single quote and without semi");",
  "write": [],
}
`;

exports[`negated options work  1`] = `
{
  "stderr": "",
  "stdout": "console.log("could be single quote and without semi")",
  "write": [],
}
`;

exports[`number file/dir  1`] = `
{
  "stdout": "1/file-in-dir-named-1.js",
}
`;

exports[`number file/dir  2`] = `
{
  "stdout": "2.2/file-in-dir-named-2.2.js",
}
`;

exports[`number file/dir  3`] = `
{
  "stdout": "3",
}
`;

exports[`number file/dir  4`] = `
{
  "stdout": "4.44",
}
`;

exports[`number file/dir  5`] = `
{
  "stdout": "1/file-in-dir-named-1.js
2.2/file-in-dir-named-2.2.js
3
4.44",
}
`;

exports[`options with \`cliName\` should not allow to pass directly  1`] = `
{
  "stdout": "prettier();",
}
`;

exports[`options with \`cliName\` should not allow to pass directly  2`] = `
{
  "stderr": "[warn] Ignored unknown option --filepath=file.js.
[error] No parser and no file path given, couldn't infer a parser.",
  "stdout": "",
}
`;

exports[`unknown negated options are warned  1`] = `
{
  "stderr": "[warn] Ignored unknown option --no-unknown.",
  "stdout": "console.log("could be single quote and without semi");",
  "write": [],
}
`;

exports[`unknown options are warned  1`] = `
{
  "stderr": "[warn] Ignored unknown option --unknown.",
  "stdout": "console.log("could be single quote and without semi");",
  "write": [],
}
`;

exports[`unknown options not suggestion \`_\`  1`] = `
{
  "stderr": "[warn] Ignored unknown option -a. Did you mean -c?",
  "stdout": "console.log("could be single quote and without semi");",
}
`;
